--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -23,7 +23,7 @@
       <%= form.label :image %><br>
       <%= form.file_field :image %>
       <% if form.object.image? %>
-          <%= image_tag form.object.image.thumb.url %>
+          <%= image_tag form.object.image %>
           <%= form.label :remove_image %>
           <%= form.check_box :remove_image %>
       <% end %>
