--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,2 +1,19 @@
-%h1 StaticPages#home
-%p Find me in app/views/static_pages/home.html.erb
+.row
+  #myCarousel.carousel.slide{"data-ride" => "carousel"}
+    / Indicators
+    %ol.carousel-indicators
+      - @carousel_images.each_with_index do |photo, n|
+        %li.if.n{:class => "\#{'active' == 0}", "data-slide-to" => "\#{n}", "data-target" => "#MyCarousel"}
+    .carousel-inner{:role => "listbox"}
+      .item.active.test
+        = image_tag @carousel_images.first.image
+      - @carousel_images.drop(1).each do |image|
+        .item.test
+          = image_tag image.image
+    / Left and right controls
+    %a.left.carousel-control{"data-slide" => "prev", :href => "#myCarousel", :role => "button"}
+      %span.glyphicon.glyphicon-chevron-left{"aria-hidden" => "true"}
+      %span.sr-only Previous
+    %a.right.carousel-control{"data-slide" => "next", :href => "#myCarousel", :role => "button"}
+      %span.glyphicon.glyphicon-chevron-right{"aria-hidden" => "true"}
+      %span.sr-only Next
