make root page view

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,7 +5,7 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      = link_to "Gallery", root_path, class: "navbar-brand"
+      = link_to "Capitalsav", root_path, class: "navbar-brand"
 
     #myNavbar.collapse.navbar-collapse
       %ul.nav.navbar-nav
