--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -67,7 +67,7 @@ body {
 /* Footer left */
 
 .footer-distributed .footer-left{
-  width: 40%;
+  //width: 40%;
 }
 
 /* The company logo */
@@ -107,7 +107,7 @@ body {
 /* Footer Center */
 
 .footer-distributed .footer-center{
-  width: 35%;
+  //width: 35%;
 }
 
 .footer-distributed .footer-center i{
@@ -151,7 +151,7 @@ body {
 /* Footer Right */
 
 .footer-distributed .footer-right{
-  width: 20%;
+  //width: 20%;
 }
 
 .footer-distributed .footer-company-about{
@@ -205,11 +205,26 @@ body {
     display: block;
     width: 100%;
     margin-bottom: 40px;
-    text-align: center;
+    //text-align: center;
   }
 
   .footer-distributed .footer-center i{
     margin-left: 0;
   }
 
+}
+
+.footer-xs-text-left {
+  text-align: center;
+  //display: inline !important;
+}
+
+.footer-xs-text-center {
+  text-align: center;
+  display: inline !important;
+}
+
+.footer-xs-text-right {
+  text-align: center;
+  //display: inline !important;
 }
