--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -1,45 +1,84 @@
 .row
   %footer.footer-distributed
-    .footer-left
-      %h3
-        Company
-        %span logo
-      %p.footer-links
-        %a{:href => "#"} Home
-        ·
-        %a{:href => "#"} Blog
-        ·
-        %a{:href => "#"} Pricing
-        ·
-        %a{:href => "#"} About
-        ·
-        %a{:href => "#"} Faq
-        ·
-        %a{:href => "#"} Contact
-      %p.footer-company-name Company Name © 2015
-    .footer-center
-      %div
-        %i.fa.fa-map-marker
-        %p
-          %span 21 Revolution Street
-          Paris, France
-      %div
-        %i.fa.fa-phone
-        %p +1 555 123456
-      %div
-        %i.fa.fa-envelope
-        %p
-          %a{:href => "mailto:support@company.com"} support@company.com
-    .footer-right
-      %p.footer-company-about
-        %span About the company
-        Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
-      .footer-icons
-        %a{:href => "#"}
-          %i.fa.fa-facebook
-        %a{:href => "#"}
-          %i.fa.fa-twitter
-        %a{:href => "#"}
-          %i.fa.fa-linkedin
-        %a{:href => "#"}
-          %i.fa.fa-github
+    .row
+      .col-xs-12.col-sm-12.col-md-4.col-lg-4
+        .row
+          .col-xs-8.col-xs-offset-2.col-sm-6.col-sm-offset-3.col-md-12.col-md-offset-0.col-lg-12.col-lg-offset-0
+            .footer-left
+              .row
+                .col-xs-12.hidden-sm.hidden-md.hidden-lg
+                  %h3.footer-xs-text-left
+                    Company
+                    %span Capitalsav
+                  %p.footer-links.footer-xs-text-left
+                    %a{:href => "#"} Home
+                    ·
+                    %a{:href => "#"} Blog
+                    ·
+                    %a{:href => "#"} Pricing
+                    ·
+                    %a{:href => "#"} About
+                    ·
+                    %a{:href => "#"} Faq
+                    ·
+                    %a{:href => "#"} Contact
+                  %p.footer-company-name.footer-xs-text-left Capitalsav © 2017
+              .row
+                .hidden-xs.col-sm-12.col-md-12.col-lg-12
+                  %h3
+                    Company
+                    %span Capitalsav
+                  %p.footer-links
+                    %a{:href => "#"} Home
+                    ·
+                    %a{:href => "#"} Blog
+                    ·
+                    %a{:href => "#"} Pricing
+                    ·
+                    %a{:href => "#"} About
+                    ·
+                    %a{:href => "#"} Faq
+                    ·
+                    %a{:href => "#"} Contact
+                  %p.footer-company-name Capitalsav © 2017
+      .col-xs-12.col-sm-12.col-md-4.col-lg-4
+        .row
+          .col-xs-8.col-xs-offset-2.col-sm-6.col-sm-offset-3.col-md-12.col-md-offset-0.col-lg-12.col-lg-offset-0
+            .footer-center
+              .row
+                .col-xs-12.hidden-sm.hidden-md.hidden-lg
+              .row
+                .hidden-xs.col-sm-12.col-md-12.col-lg-12
+                  %div
+                    %i.fa.fa-map-marker
+                    %p
+                      %span 1 Second Street
+                      Zaporizhzha, Ukraine
+                  %div
+                    %i.fa.fa-phone
+                    %p 0 800 111 11 11
+                  %div
+                    %i.fa.fa-envelope
+                    %p
+                      %a{:href => "mailto:support@company.com"} capitalsav@gmail.com
+      .col-xs-12.col-sm-12.col-md-4.col-lg-4
+        .row
+          .col-xs-8.col-xs-offset-2.col-sm-6.col-sm-offset-3.col-md-12.col-md-offset-0.col-lg-12.col-lg-offset-0
+            .footer-right
+              .row
+                .col-xs-12.hidden-sm.hidden-md.hidden-lg
+              .row
+                .hidden-xs.col-sm-12.col-md-12.col-lg-12
+                  %p.footer-company-about
+                    %span About the company
+                    Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
+                  .footer-icons
+                    %a{:href => "#"}
+                      %i.fa.fa-facebook
+                    %a{:href => "#"}
+                      %i.fa.fa-twitter
+                    %a{:href => "#"}
+                      %i.fa.fa-linkedin
+                    %a{:href => "#"}
+                      %i.fa.fa-github
+
