--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,5 +1,5 @@
 %header.nav.navbar.navbar-inverse
-  .container
+  .container-fluid
     .navbar-header
       %button.navbar-toggle{"data-target" => "#myNavbar", "data-toggle" => "collapse", :type => "button"}
         %span.icon-bar
