--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -1,25 +1,50 @@
-%h2 Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :name
-    %br/
-    = f.text_field :name, autofocus: true
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .actions
-    = f.submit "Sign up"
-= render "users/shared/links"
+.row.main-sign-up-row
+  .col-xs-12
+    .row
+      .col-xs-12
+        .auth-form-container.auth-form-container-size
+          = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+            = devise_error_messages!
+            = f.text_field :name, :placeholder => 'name', :class => 'sign-up-input'
+            = f.text_field :email, placeholder: 'email', :class => 'sign-up-input'
+            = f.password_field :password, :placeholder => 'password', :class => 'sign-up-input'
+            = f.password_field :password_confirmation, :placeholder => 'password_confirmation', :class => 'sign-up-input'
+            = f.submit 'Sign Up', class: 'btn btn-success button-sign-up'
+          = render "users/shared/links"
+
+-#.row.main-sign-up-row
+-#  .col-xs-12
+-#    .row
+-#      .col-xs-10.col-xs-offset-1.col-sm-6.col-sm-offset-3.col-md-6.col-md-offset-3.col-lg-4.col-lg-offset-4.auth-form-container
+-#        = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+-#          = devise_error_messages!
+-#          .row
+-#            .col-xs-10.col-xs-offset-1
+-#              .field
+-#                = f.label :name
+-#                %br/
+-#                = f.text_field :name, autofocus: true
+-#          .row
+-#            .col-xs-10.col-xs-offset-1
+-#              .field
+-#                = f.label :email
+-#                %br/
+-#                = f.email_field :email, autofocus: true
+-#          .row
+-#            .col-xs-10.col-xs-offset-1
+-#              .field
+-#                = f.label :password
+-#                - if @minimum_password_length
+-#                  %em
+-#                    (#{@minimum_password_length} characters minimum)
+-#                %br/
+-#                = f.password_field :password, autocomplete: "off"
+-#          .row
+-#            .col-xs-10.col-xs-offset-1
+-#              .field
+-#                = f.label :password_confirmation
+-#                %br/
+-#                = f.password_field :password_confirmation, autocomplete: "off"
+-#          .actions
+-#          = f.submit "Sign up"
+-#        = render "users/shared/links"
