--- a/app/views/likes/_unlike.html.haml
+++ b/app/views/likes/_unlike.html.haml
@@ -1,2 +1,3 @@
 = form_for(current_user.likes.find_by(image_id: @image.id), html: { method: :delete }, remote: true) do |f|
+  = f.hidden_field :image_id
   = f.submit "Unlike", class: "btn btn-large"
