save comment to image in images/show form

--- a/app/views/images/show.html.haml
+++ b/app/views/images/show.html.haml
@@ -17,10 +17,10 @@
   = image_tag "#{@image.image}"
 %p
   - @comments.each do |comment|
-    - comment.text
-  -#= form_for(current_user.comments.build(@image.id), html: { method: :post }, remote: true) do |f|
-  -#  = f.text_field :text
-  -#  = f.submit "Comment", class: "btn btn-large"
+    = comment.text
+  = form_for(current_user.comments.build(image_id: @image.id), url: image_comments_path(@image.id), html: { method: :post }, remote: true) do |f|
+    = f.text_field :text
+    = f.submit "Comment", class: "btn btn-large"
 = link_to 'Edit', edit_image_path(@image)
 |
 = link_to 'Back', images_path
