show comments and update after post new comment

--- a/app/views/images/show.html.haml
+++ b/app/views/images/show.html.haml
@@ -16,8 +16,8 @@
   %strong Image:
   = image_tag "#{@image.image}"
 %p
-  - @comments.each do |comment|
-    = comment.text
+  %p#comments
+    = render "comments/comments"
   = form_for(current_user.comments.build(image_id: @image.id), url: image_comments_path(@image.id), html: { method: :post }, remote: true) do |f|
     = f.text_field :text
     = f.submit "Comment", class: "btn btn-large"
