show likes and comments on categories/Category/id

--- a/app/views/categories/show_one_image.html.haml
+++ b/app/views/categories/show_one_image.html.haml
@@ -1,1 +1,6 @@
 = image_tag "#{@image.image}"
+= render "likes/like_form"
+= render "comments/comments"
+= form_for(current_user.comments.build(image_id: @image.id), url: image_comments_path(@image.id), html: { method: :post }, remote: true) do |f|
+  = f.text_field :text
+  = f.submit "Comment", class: "btn btn-large"
