--- a/app/views/likes/destroy.js.erb
+++ b/app/views/likes/destroy.js.erb
@@ -1,1 +1,2 @@
 $("#like_form").html("<%= escape_javascript(render('likes/like',{@image => @image})) %>")
+$("#like_form_category").html("<%= escape_javascript(render('likes/like',{@image => @image})) %>")
