make different sizes for uploaded images

--- a/app/views/categories/show_images.html.haml
+++ b/app/views/categories/show_images.html.haml
@@ -1,5 +1,5 @@
 - @images_with_likes.each do |image_hash|
-  = image_tag "#{image_hash["image_key"].image}"
+  = image_tag "#{image_hash["image_key"].image.url}"
   - if image_hash["like_key"] == nil
     = render "likes/like_form_categories_img", local_form_image_id: image_hash["image_key"].id
   - if image_hash["like_key"] != nil
