--- a/app/views/users/registrations/profile.html.haml
+++ b/app/views/users/registrations/profile.html.haml
@@ -1,38 +1,15 @@
-%h2
-  Edit #{resource_name.to_s.humanize}
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  = devise_error_messages!
-  .field
-    = f.text_field :name, :placeholder => 'name', :class => 'auth-input'
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    %div
-      Currently waiting confirmation for: #{resource.unconfirmed_email}
-  .field
-    = f.label :password
-    %i (leave blank if you don't want to change it)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-    - if @minimum_password_length
-      %br/
-      %em
-        = @minimum_password_length
-        characters minimum
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .field
-    = f.label :current_password
-    %i (we need your current password to confirm your changes)
-    %br/
-    = f.password_field :current_password, autocomplete: "off"
-  .actions
-    = f.submit "Update"
-%h3 Cancel my account
-%p
-  Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Back", :back
+.row.main-profile-row
+  .col-xs-12
+    .auth-form-container.auth-form-container-size
+      = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+        = devise_error_messages!
+        = f.text_field :name, :placeholder => 'name', :class => 'auth-input'
+        = f.text_field :email, placeholder: 'email', :class => 'auth-input'
+        = f.password_field :password, :placeholder => 'password', :class => 'auth-input'
+        = f.password_field :password_confirmation, :placeholder => 'password confirmation', :class => 'auth-input'
+        = f.password_field :current_password, autocomplete: "off", :placeholder => 'new password', :class => 'auth-input'
+        = f.submit 'Update', class: 'btn btn-success button-auth'
+      .cancel-account-part
+        %p#p-cancel-account Want to cancel account?
+        #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger btn-cancel-account"}
+      .profile-form-bottom-empty-space
