--- a/app/assets/stylesheets/user_auth.scss
+++ b/app/assets/stylesheets/user_auth.scss
@@ -92,6 +92,7 @@
 /*Profile*/
 .main-profile-row {
   min-height: 80vh;
+  margin-bottom: 10%;
 }
 
 .cancel-account-part {
@@ -115,4 +116,16 @@
 
 .profile-form-bottom-empty-space {
   height: 20px;
+}
+
+#profile-img-thumbnail {
+  border: none;
+}
+
+#btn-avatar-upload {
+  width: 40%;
+  margin-left: 30%;
+  margin-right: 30%;
+  border-radius: 0px;
+  margin-bottom: 10px;
 }
