--- a/app/views/users/registrations/profile.html.haml
+++ b/app/views/users/registrations/profile.html.haml
@@ -3,13 +3,31 @@
     .auth-form-container.auth-form-container-size
       = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
         = devise_error_messages!
+        .thumbnail#profile-img-thumbnail
+          = image_tag "#{@avatar.image.small_thumb.url}", :class => "img-circle"
+        .btn.btn-success#btn-avatar-upload{"data-toggle" => "modal", "data-target" => "#avatarUploadModel"}
+          %span.glyphicon.glyphicon-upload
+          Upload avatar
         = f.text_field :name, :placeholder => 'name', :class => 'auth-input'
         = f.text_field :email, placeholder: 'email', :class => 'auth-input'
-        = f.password_field :password, :placeholder => 'password', :class => 'auth-input'
-        = f.password_field :password_confirmation, :placeholder => 'password confirmation', :class => 'auth-input'
-        = f.password_field :current_password, autocomplete: "off", :placeholder => 'new password', :class => 'auth-input'
+        = f.password_field :password, :placeholder => 'new password', :class => 'auth-input'
+        = f.password_field :password_confirmation, :placeholder => 'new password confirmation', :class => 'auth-input'
+        = f.password_field :current_password, autocomplete: "off", :placeholder => 'current password', :class => 'auth-input'
         = f.submit 'Update', class: 'btn btn-success button-auth'
       .cancel-account-part
         %p#p-cancel-account Want to cancel account?
         #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger btn-cancel-account"}
       .profile-form-bottom-empty-space
+
+/ Modal
+#avatarUploadModel.modal.fade{:role => "dialog"}
+  .modal-dialog
+    / Modal content
+    .modal-content
+      .modal-header
+        %button.close{"data-dismiss" => "modal", :type => "button"} ×
+        %h4.modal-title Upload avatar
+      .modal-body
+        = render 'avatars/form'
+      .modal-footer
+        %button.btn.btn-default{"data-dismiss" => "modal", :type => "button"} Close
