--- a/app/views/users/registrations/profile.html.haml
+++ b/app/views/users/registrations/profile.html.haml
@@ -4,9 +4,11 @@
       = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
         = devise_error_messages!
         .thumbnail#profile-img-thumbnail
-          = image_tag "#{@avatar.image.small_thumb.url}", :class => "img-circle"
+          - if @avatar[:avatar_uploaded]
+            = image_tag "#{@avatar[:avatar].image.small_thumb.url}", :class => "img-circle"
+          - if !@avatar[:avatar_uploaded]
+            = image_tag @avatar[:avatar], :class => "img-circle"
         .btn.btn-success#btn-avatar-upload{"data-toggle" => "modal", "data-target" => "#avatarUploadModel"}
-          %span.glyphicon.glyphicon-upload
           Upload avatar
         = f.text_field :name, :placeholder => 'name', :class => 'auth-input'
         = f.text_field :email, placeholder: 'email', :class => 'auth-input'
@@ -28,6 +30,7 @@
         %button.close{"data-dismiss" => "modal", :type => "button"} ×
         %h4.modal-title Upload avatar
       .modal-body
+        .avatar-upload-errors
         = render 'avatars/form'
       .modal-footer
         %button.btn.btn-default{"data-dismiss" => "modal", :type => "button"} Close
