use avatar uploader with devise

--- a/app/assets/stylesheets/user_auth.scss
+++ b/app/assets/stylesheets/user_auth.scss
@@ -43,6 +43,33 @@
   height: 5px;
 }
 
+.btn-file {
+  position: relative;
+  overflow: hidden;
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
+  border-radius: 0 !important;
+  margin-bottom: 10px !important;
+}
+
+.btn-file input[type=file] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-width: 100%;
+  min-height: 100%;
+  font-size: 100px;
+  text-align: right;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  outline: none;
+  background: white;
+  cursor: inherit;
+  display: block;
+}
+
+
 @media (max-width: 460px) {
   .auth-form-container-size {
     width: 95%;
