--- a/app/assets/stylesheets/user_auth.scss
+++ b/app/assets/stylesheets/user_auth.scss
@@ -69,6 +69,10 @@
   display: block;
 }
 
+#p-sign-up-avatar {
+  margin-bottom: 0px !important;
+}
+
 
 @media (max-width: 460px) {
   .auth-form-container-size {
