make custom avatar upload button for profile page

--- a/app/assets/stylesheets/user_auth.scss
+++ b/app/assets/stylesheets/user_auth.scss
@@ -73,6 +73,10 @@
   margin-bottom: 0px !important;
 }
 
+#p-profile-avatar {
+  margin-bottom: 0px !important;
+}
+
 
 @media (max-width: 460px) {
   .auth-form-container-size {
