--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,7 +11,7 @@
       %ul.nav.navbar-nav
         %li.dropdown
           %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-            Popular Categories
+            Top Categories
             %span.caret
           %ul.dropdown-menu
             %li
@@ -30,6 +30,8 @@
           %a{:href => "#"} Comments
       %ul.nav.navbar-nav.navbar-right
         - if user_signed_in?
+          %li
+            = link_to '<i class="glyphicon glyphicon-user"></i> Profile'.html_safe, profile_path
           %li
             = link_to '<i class="glyphicon glyphicon-log-out"></i> Log out'.html_safe, destroy_user_session_path, method: :delete
         - else
