--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the Images controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.img-comments-box {
+  background-color: white;
+}
+
+.input-comment {
+  width: 100%;
+  height: 100px;
+  margin-top: 1px;
+  -webkit-box-shadow: 2px 2px 0px 0px rgba(0,0,0,0.2);
+  -moz-box-shadow: 2px 2px 0px 0px rgba(0,0,0,0.2);
+  box-shadow: 2px 2px 0px 0px rgba(0,0,0,0.2);
+}
+
+.btn-comment {
+  -webkit-box-shadow: 2px 2px 0px 0px rgba(0,0,0,0.2);
+  -moz-box-shadow: 2px 2px 0px 0px rgba(0,0,0,0.2);
+  box-shadow: 2px 2px 0px 0px rgba(0,0,0,0.2);
+}
