--- a/app/views/likes/_like.html.haml
+++ b/app/views/likes/_like.html.haml
@@ -1,3 +1,4 @@
 = link_to'<i class="glyphicon glyphicon-thumbs-up btn btn-primary"></i>'.html_safe, image_likes_path(@image), :method => :post, remote: true
 %span.likes-count
   = @likes_count
+  Likes
