--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Categories controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.categories-small-thumb {
+  max-width: 300px;
+}
+
+.categories-cat-name {
+  font-weight: bolder;
+}
+
+.categories-link {
+  color: #76b852;
+}
