--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -12,3 +12,23 @@
 .categories-link {
   color: #76b852;
 }
+
+.single-cat-img {
+  max-width: 100%;
+  height: auto;
+}
+
+//.single-cat-img-thumb {
+//  height: 50vh;
+//  width: 100%;
+//}
+//
+//.single-cat-img-thumb img{
+//  height: 100%;
+//  width: 100%;
+//}
+
+//.single-cat-img-thumb img {
+//  height: 100%;
+//  width: 100%;
+//}
