--- a/app/views/likes/_like_category_img.html.haml
+++ b/app/views/likes/_like_category_img.html.haml
@@ -1,1 +1,4 @@
-= link_to "Like", image_likes_path(local_image_id), :method => :post, remote: true
+= link_to'<i class="glyphicon glyphicon-thumbs-up btn btn-primary"></i>'.html_safe, image_likes_path(local_image_id), :method => :post, remote: true
+%span.likes-count
+  = local_likes_count
+  Likes
