make simple look of single category image page

--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -14,21 +14,13 @@
 }
 
 .single-cat-img {
-  max-width: 100%;
-  height: auto;
+
 }
 
-//.single-cat-img-thumb {
-//  height: 50vh;
-//  width: 100%;
-//}
-//
-//.single-cat-img-thumb img{
-//  height: 100%;
-//  width: 100%;
-//}
+.single-cat-img-thumb {
 
-//.single-cat-img-thumb img {
-//  height: 100%;
-//  width: 100%;
-//}
+}
+
+.single-cat-img-thumb img{
+  width: 100%;
+}
