--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -25,7 +25,7 @@
             %li
               %a{:href => "#"} Page 1-5
         %li
-          %a{:href => "#"} Images
+          = link_to "Images", images_path
         %li
           = link_to "Comments", comments_path
       %ul.nav.navbar-nav.navbar-right
