--- a/app/views/categories/show_images.html.haml
+++ b/app/views/categories/show_images.html.haml
@@ -1,5 +1,9 @@
 .row
   .col-xs-12
+    .row#subscribe-row
+      .col-xs-12
+        %div{align: "center"}
+          = render "subscriptions/subscription_form"
     .row
       - @images_with_likes.each do |image_hash|
         .col-xs-12
@@ -17,4 +21,5 @@
                     %span.likes-count
                       = image_hash["likes_count_key"]
                       Likes
+
 
