make email notification when user subscribe on category

--- a/app/views/category_mailer/subscribe_email.text.erb
+++ b/app/views/category_mailer/subscribe_email.text.erb
@@ -1,9 +1,9 @@
 
-Hello, <%= @user.name %>
+Hello, <%= @user["name"] %>
 ===============================================
 
 You received this email, because you have successfully subscribe on category
 
-<%= @category.name %>
+<%= @category["name"] %>
 
 Have a nice day. Good buy!
