--- a/app/views/category_mailer/subscribe_email.html.haml
+++ b/app/views/category_mailer/subscribe_email.html.haml
@@ -7,7 +7,7 @@
   %body
     %span
       Hello,
-      =@user.name
+      =@user["name"]
     %p You received this email, because you have successfully subscribe on category
-    = @category.name
+    = @category["name"]
     %p Have a nice day. Good buy!
