user can cancel his account. His images will be delete (not only in his categories)

--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -5,16 +5,9 @@
       - @categories_with_images.each do |category|
         .col-xs-12.col-sm-4
           %div{align: "center"}
-            -if category["image_key"].image.medium_thumb.file.exists?
+            -if category["image_key"].present?
               .thumbnail.categories-small-thumb
                 = image_tag category["image_key"].image.medium_thumb.url
-                .caption
-                  %div{align: "left"}
-                    %span.categories-cat-name
-                      =link_to "#{category["category_key"].name}", single_category_path(category["category_key"].name), class: 'categories-link'
-            - else
-              .thumbnail.categories-small-thumb
-                = image_tag category["image_key"].image.url
                 .caption
                   %div{align: "left"}
                     %span.categories-cat-name
