--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,19 +11,15 @@
       %ul.nav.navbar-nav
         %li.dropdown
           %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-            Top Categories
+            Categories
             %span.caret
           %ul.dropdown-menu
+            - @top_categories.each do |category|
+              %li
+                = link_to "#{category.name}", single_category_path(category.name), :method => :get
+            %li.divider
             %li
-              %a{:href => "#"} Page 1-1
-            %li
-              %a{:href => "#"} Page 1-2
-            %li
-              %a{:href => "#"} Page 1-3
-            %li
-              %a{:href => "#"} Page 1-4
-            %li
-              %a{:href => "#"} Page 1-5
+              = link_to "All Categories", categories_path
         %li
           = link_to "Images", images_path
         %li
