correct a typo in subscription category notification email text

--- a/app/views/category_mailer/subscribe_email.text.erb
+++ b/app/views/category_mailer/subscribe_email.text.erb
@@ -6,4 +6,4 @@ You received this email, because you have successfully subscribe on category
 
 <%= @category["name"] %>
 
-Have a nice day. Good buy!
+Have a nice day. Good bye!
