--- a/app/views/category_mailer/subscribe_email.html.haml
+++ b/app/views/category_mailer/subscribe_email.html.haml
@@ -10,4 +10,4 @@
       =@user["name"]
     %p You received this email, because you have successfully subscribe on category
     = @category["name"]
-    %p Have a nice day. Good buy!
+    %p Have a nice day. Good bye!
