--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -16,7 +16,7 @@
           %ul.dropdown-menu
             - @top_categories.each do |category|
               %li
-                = link_to "#{category.name}", single_category_path(category.name), :method => :get
+                = link_to "#{category.name}", single_category_path(category.slug), :method => :get
             %li.divider
             %li
               = link_to "All Categories", categories_path
