update category show_images controller action

--- a/app/views/categories/show_images.html.haml
+++ b/app/views/categories/show_images.html.haml
@@ -1,29 +1,30 @@
 .row
   .col-xs-12
-    .row#subscribe-row
-      .col-xs-12
-        %div{align: "center"}
-          = render "subscriptions/subscription_form"
-    .row
-      .col-xs-12
-        %div{align: "center"}
-          = link_to'<i class="btn btn-primary">Upload New Image</i>'.html_safe, new_image_path(@category.slug), :method => :get
+    - if user_signed_in?
+      .row#subscribe-row
+        .col-xs-12
+          %div{align: "center"}
+            = render "subscriptions/subscription_form"
+      .row
+        .col-xs-12
+          %div{align: "center"}
+            = link_to'<i class="btn btn-primary">Upload New Image</i>'.html_safe, new_image_path(@category.slug), :method => :get
     .row
       - @images_with_likes.each do |image_hash|
         .col-xs-12
           %div{align: "center"}
             .thumbnail.single-cat-img-thumb
-              = image_tag "#{image_hash["image_key"].image.url}", class: 'single-cat-img'
+              = image_tag "#{image_hash[:image_key].image.url}", class: 'single-cat-img'
               .caption
                 %div{align: "left"}
                   - if user_signed_in?
-                    - if image_hash["like_key"] == nil
-                      = render "likes/like_form_categories_img", local_form_image_id: image_hash["image_key"].id, local_form_likes_count: image_hash["likes_count_key"]
-                    - if image_hash["like_key"] != nil
-                      = render "likes/like_form_categories_img", local_form_image_id: image_hash["image_key"].id, local_form_like_id: image_hash["like_key"].id, local_form_likes_count: image_hash["likes_count_key"]
+                    - if image_hash[:like_key] == nil
+                      = render "likes/like_form_categories_img", local_form_image_id: image_hash[:image_key].id, local_form_likes_count: image_hash[:likes_count_key]
+                    - if image_hash[:like_key] != nil
+                      = render "likes/like_form_categories_img", local_form_image_id: image_hash[:image_key].id, local_form_like_id: image_hash[:like_key].id, local_form_likes_count: image_hash[:likes_count_key]
                   - if !user_signed_in?
                     %span.likes-count
-                      = image_hash["likes_count_key"]
+                      = image_hash[:likes_count_key]
                       Likes
 
 
