--- a/app/views/categories/show_one_image.html.haml
+++ b/app/views/categories/show_one_image.html.haml
@@ -10,11 +10,12 @@
           %span
             = @likes_count
             Likes
-  - if user_signed_in?
     .col-xs-12
       .thumbnail.comments-box-thumbnail
-        = form_for(current_user.comments.build(image_id: @image.id), url: image_comments_path(@image.id), html: { method: :post }, remote: true) do |f|
-          = f.text_area :text, class: "input-comment"
-          %div{align: "right"}
-            = f.submit "Comment", class: "btn btn-primary btn-comment"
-        = render "comments/comments"
+        - if user_signed_in?
+          = form_for(current_user.comments.build(image_id: @image.id), url: image_comments_path(@image.id), html: { method: :post }, remote: true) do |f|
+            = f.text_area :text, class: "input-comment"
+            %div{align: "right"}
+              = f.submit "Comment", class: "btn btn-primary btn-comment"
+        #comments-container
+          = render "comments/comments_container"
