--- a/app/views/comments/_comments.html.haml
+++ b/app/views/comments/_comments.html.haml
@@ -1,11 +1,10 @@
-#comments
-  - @comments_with_users.each do |comment|
-    .thumbnail.comment-thumb
-      .row
-        .col-xs-12
-          -if comment["user"].avatar.present?
-            = image_tag "#{comment["user"].avatar.small_thumb.url}", :class => "img-circle comment-avatar"
-          %span.span-comment-name
-            = comment["user"].name
-          %span.span-comment-text
-            = comment["comment"].text
+- @comments.each do |comment|
+  .thumbnail.comment-thumb
+    .row
+      .col-xs-12
+        -if comment.user.avatar.present?
+          = image_tag "#{comment.user.avatar.small_thumb.url}", :class => "img-circle comment-avatar"
+        %span.span-comment-name
+          = comment.user.name
+        %span.span-comment-text
+          = comment.text
