--- a/app/views/categories/show_one_image.html.haml
+++ b/app/views/categories/show_one_image.html.haml
@@ -9,7 +9,7 @@
         .likes-count
           %span
             = @likes_count
-            Likes
+            =t('.likes')
     .col-xs-12
       .thumbnail.comments-box-thumbnail
         - if user_signed_in?
