--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -11,7 +11,7 @@
                 .caption
                   %div{align: "left"}
                     %span.categories-cat-name
-                      =link_to "#{category[:category_key].name}", single_category_path(category[:category_key].name), class: 'categories-link'
+                      =link_to "#{category[:category_key].name}", single_category_path(category[:category_key].slug), class: 'categories-link'
 
 -#%p#notice= notice
 -#%h1 Categories
