resolve issue with likes on single image page and refactor user actions save code

--- a/app/views/likes/_unlike.html.haml
+++ b/app/views/likes/_unlike.html.haml
@@ -1,4 +1,4 @@
 = link_to'<i class="glyphicon glyphicon-thumbs-down btn btn-default"></i>'.html_safe, image_like_path(@image.id, @like.id), :method => :delete, remote: true
 %span.likes-count
-  = @likes_count
+  = @image.likes.size
   = t('.likes')
