--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,1 +1,1 @@
-$("#comments").html("<%= escape_javascript(render('comments/comments',{@comments => @comments})) %>")
+$("#comments").html("<%= escape_javascript(render('comments/comments',{@image => @image})) %>")
